--- a/Casgem.BusinessLayer/Casgem.BusinessLayer.csproj
+++ b/Casgem.BusinessLayer/Casgem.BusinessLayer.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Casgem.DataAccessLayer\Casgem.DataAccessLayer.csproj" />
+  </ItemGroup>
+
 </Project>
